tdf#98113: SVGIO: Add SvgANode class to handle transport ...

... attribute in anchor elements.

I used Svggnode class a a reference for this.

Change-Id: Id2a58bd913f9984dc91163ca0f333c016aa981f1