svgio/inc/svgio/svgreader/svgtoken.hxx
@@ -127,6 +127,7 @@ namespace svgio
             SVGTokenSvg,
             SVGTokenSymbol,
             SVGTokenUse,
+            SVGTokenA,
 
             // shape elements
             SVGTokenCircle,
