svgio/source/svgreader/svgtoken.cxx
@@ -116,6 +116,7 @@ namespace svgio
         static const char aSVGStrSvg[] = "svg";
         static const char aSVGStrSymbol[] = "symbol";
         static const char aSVGStrUse[] = "use";
+        static const char aSVGStrA[] = "a";
 
         static const char aSVGStrCircle[] = "circle";
         static const char aSVGStrEllipse[] = "ellipse";
@@ -264,6 +265,7 @@ namespace svgio
                 aSVGTokenMapperList.insert(SVGTokenValueType(aSVGStrSvg, SVGTokenSvg));
                 aSVGTokenMapperList.insert(SVGTokenValueType(aSVGStrSymbol, SVGTokenSymbol));
                 aSVGTokenMapperList.insert(SVGTokenValueType(aSVGStrUse, SVGTokenUse));
+                aSVGTokenMapperList.insert(SVGTokenValueType(aSVGStrA, SVGTokenA));
 
                 aSVGTokenMapperList.insert(SVGTokenValueType(aSVGStrCircle, SVGTokenCircle));
                 aSVGTokenMapperList.insert(SVGTokenValueType(aSVGStrEllipse, SVGTokenEllipse));
