svgio/Library_svgio.mk
@@ -51,6 +51,7 @@ $(eval $(call gb_Library_add_exception_objects,svgio,\
     svgio/source/svgreader/svgdocumenthandler \
     svgio/source/svgreader/svgellipsenode \
     svgio/source/svgreader/svggnode \
+    svgio/source/svgreader/svganode \
     svgio/source/svgreader/svggradientnode \
     svgio/source/svgreader/svggradientstopnode \
     svgio/source/svgreader/svgimagenode \
